11) Fix restart transmission at new disk mount.<br>
12) Add iptables rules for transmission.<br>
13) Disable NAND Flash support per default. Not used NAND Flash in real routers devices. Use only in STB.<br>
14) WiFi drivers disable ATE mode support, disable some debug messages, disable IAPP support(need external daemon for support).<br>
15) Fix wireless security page.<br>
16) Add PrinterSrvEnabled PrinterSrvBidir variables for configure print server.<br>
17) Set low prio for samba and transmission.<br>
18) PPPD add external_chap_sec options for use /etc/ppp-l2tpsrv/chap-secrets instad /etc/ppp/chap-secrets in server mode.<br>
19) Fix l2tp server autentification.<br>
20) Set minunit for l2tp server mode to 10 (need hole).<br>
21) Fix lld2d wireless parametrs get for ralink and no need always open /proc/net/dev.<br>
22) Add boot_leds_blink variable for configure boot time led indicators gpio (default 13 14).<br>
23) Goahead code cleanup and If-Modified-Support enabled.<br>
24) Busybox bump version to 1.19.3.<br>
25) Add l2tp server WebUI.<br>
26) Add some params in WebUI and rework some options.<br>
27) Fix pppoe+dhcp start regression.<br>
28) Add code for more correct mount usb disks procedure.<br>
29) Small rewrites in start logic.<br>
30) If optware mount search apps first in /opt/(s)bin.<br>
31) Transmission update to 2.42 version.<br>
32) Samba2 fix LFS support in client and mount.<br>
33) Create /dev/console move in kernel mode.<br>
34) PPTP/L2TP clients try resolv server IP some times.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>