@@ -789,6 +789,7 @@
 32) Samba2 fix LFS support in client and mount.<br>
 33) Create /dev/console move in kernel mode.<br>
 34) PPTP/L2TP clients try resolv server IP some times.<br>
+35) Always create /tmp/vpnip. Fix if server string = IP (centrlan and others buggy ISP).<br>
 
 <br><br>
 <b>For support see:</b><br>
